--- a/ls-desktop-client/package.json
+++ b/ls-desktop-client/package.json
@@ -171,6 +171,7 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.64.8",
     "source-map-support": "^0.4.10"
   },
   "devEngines": {
