--- a/ls-desktop-client/package.json
+++ b/ls-desktop-client/package.json
@@ -170,6 +170,7 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.64.8",
     "source-map-support": "^0.4.10"
