--- a/ls-desktop-client/package.json
+++ b/ls-desktop-client/package.json
@@ -173,6 +173,7 @@
     "redux-promise": "^0.5.3",
     "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.2.0",
+    "rest": "^2.0.0",
     "semantic-ui-react": "^0.64.8",
     "source-map-support": "^0.4.10"
   },
