--- a/ls-server/build.gradle
+++ b/ls-server/build.gradle
@@ -25,7 +25,9 @@ repositories {
 	mavenCentral()
 }
 
-
+compileJava {
+	options.compilerArgs << '-parameters'
+}
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
